--- a/try2.ipynb
+++ b/try2.ipynb
@@ -76,9 +76,7 @@
    "outputs": [],
    "source": [
     "## training and testing directory path\n",
-    "# C:\\Users\\risal\\My_Codes\\Projectdataminor\\traintestsplit\\Dataset\\train\n",
-    "train_path='/Users/risal/My_Codes/Projectdataminor/traintestsplit/DataSet/train'\n",
-    "# val_path='/Users/risal/My_Codes/Projectdataminor/CrossValidation/birdsDataSet/Dataset/val'"
+    "train_path='/Users/risal/My_Codes/Projectdataminor/traintestsplit/DataSet/train'"
    ]
   },
   {
@@ -147,65 +145,6 @@
     "# Print the class labels\n",
     "print(class_labels)\n",
     "# print(classes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 135,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import torch.nn as nn\n",
-    "\n",
-    "# class ConvNet(nn.Module):\n",
-    "#     def __init__(self, num_classes=38, kernel_size_conv1=3, in_channels=3,\n",
-    "#                  out_channels_conv1=12, out_channels_conv2=20, kernel_size_conv2=3,\n",
-    "#                  out_channels_conv3=32, kernel_size_conv3=3, num_features_batchnorm=32,\n",
-    "#                  kernel_size_maxpool=2, dropout_prob=0.3):\n",
-    "#         super(ConvNet, self).__init__()\n",
-    "\n",
-    "#         # Convolutional layers\n",
-    "#         self.conv1 = nn.Conv2d(in_channels=in_channels, out_channels=out_channels_conv1,\n",
-    "#                                kernel_size=kernel_size_conv1, stride=1, padding=1)\n",
-    "#         self.btch1 = nn.BatchNorm2d(num_features=out_channels_conv1)\n",
-    "#         self.relu1 = nn.LeakyReLU()\n",
-    "#         self.pool = nn.MaxPool2d(kernel_size=kernel_size_maxpool)\n",
-    "\n",
-    "#         self.conv2 = nn.Conv2d(in_channels=out_channels_conv1, out_channels=out_channels_conv2,\n",
-    "#                                kernel_size=kernel_size_conv2, stride=1, padding=1)\n",
-    "#         self.relu2 = nn.LeakyReLU()\n",
-    "#         self.dropout1 = nn.Dropout(p=dropout_prob)\n",
-    "\n",
-    "#         self.conv3 = nn.Conv2d(in_channels=out_channels_conv2, out_channels=out_channels_conv3,\n",
-    "#                                kernel_size=kernel_size_conv3, stride=1, padding=1)\n",
-    "#         self.btch3 = nn.BatchNorm2d(num_features=out_channels_conv3)\n",
-    "#         self.relu3 = nn.LeakyReLU()\n",
-    "#         self.dropout2 = nn.Dropout(p=dropout_prob)  # Regularization drop_out\n",
-    "\n",
-    "#         # Fully connected layer\n",
-    "#         self.fc = nn.Linear(in_features=75 * 75 * out_channels_conv3, out_features=num_classes)\n",
-    "\n",
-    "#     def forward(self, input):\n",
-    "#         # Convolutional layers\n",
-    "#         ot_put = self.conv1(input)\n",
-    "#         ot_put = self.btch1(ot_put)\n",
-    "#         ot_put = self.relu1(ot_put)\n",
-    "#         ot_put = self.pool(ot_put)\n",
-    "\n",
-    "#         ot_put = self.conv2(ot_put)\n",
-    "#         ot_put = self.relu2(ot_put)\n",
-    "#         ot_put = self.dropout1(ot_put)\n",
-    "\n",
-    "#         ot_put = self.conv3(ot_put)\n",
-    "#         ot_put = self.btch3(ot_put)\n",
-    "#         ot_put = self.relu3(ot_put)\n",
-    "#         ot_put = self.dropout2(ot_put)\n",
-    "\n",
-    "#         # Reshape and fully connected layer\n",
-    "#         ot_put = ot_put.view(-1, 75 * 75 * 32)\n",
-    "#         ot_put = self.fc(ot_put)\n",
-    "\n",
-    "#         return ot_put\n"
    ]
   },
   {
@@ -2800,8 +2739,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# images_path=glob.glob('/Users/risal/My_Codes/Projectdataminor/traintestsplit/Dataset/newtest/*')# test image\n",
-    "# images_path=glob.glob('/Users/risal/My_Codes/Projectdataminor/traintestsplit/Dataset/train/Golden Babbler Stachyris chrysaea/Golden Babbler Stachyris chrysaea 1.png')# train image\n",
     "images_path=glob.glob('/Users/risal/My_Codes/Projectdataminor/traintestsplit/Dataset/val/Abbott’s Babbler Malacocincla abbotti/Abbott’s Babbler Malacocincla abbotti 1.jpg')\n"
    ]
   },
